# nlp-core

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: usage_example.py
nlp_core/: __init__.py  data_utils.py
tests/: test_data_utils.py
